2003/11/12 16:05 pcg

	* xs/GdkTypes.xs: change acessor methods to mutators for
        Gtk2::Gdk:Rectangle.

2003/11/11 23:00 (-0500) muppetman

	* xs/PangoFont.xs: put the docs for the constants into the
	Gtk2::Pango::FontDescription package, so that the doc generation
	stuff doesn't overwrite the docs from Pango.pm.

2003/11/12 01:57 pcg

        * xs/GdkPixbuf.xs, xs/GtkWindow.xs, xs/GtkImage.xs, xs/GtkRc.xs,
        xs/GtkIconFactory.xs, xs/GdkPixmap.xs: use GPerlFilename and
        gperl_filename_from_sv on behalf of the user, so filenames work
        the same as in other parts of gtk/glib (and sometimes unlike perl,
        but it's the only way to load locale-encoded files).
        * xs/GtkFileSelection.xs: convert to use new typemap entries.

2003/11/11 00:36 (-0500) muppetman

	* MANIFEST, debian/*: remove the debian packaging files, since having
	them in the upstream dist makes it difficult for the maintainers

	* xs/GtkEditable.xs: use casts to hush the compiler's indignant warnings
	about our flagrant disregard for the const-ness of param_values

	* xs/PangoContext.xs: remove a couple of functions that are only enabled
	when building pango backends

2003/11/10 15:00 (-0500) muppetman

	* xs/GtkWidget.xs: bind gtk_widget_event().

	* examples/rulers.pl, MANIFEST: add a ported version of the rulers
	example from the gtk-perl tutorial, using gtk_widget_event() to 
	propagate the motion notify events to the rulers.  this was previously
	not possible.

2003/11/10 13:35 (-0500) muppetman

	* xs/GtkDialog.xs, xs/GtkEditable.xs: use the new macros in the new
	gperl_marshal.h to implement custom signal marshallers.

	* examples/insert-text-test.pl: additional marshaller smoke test

2003/11/10 09:12 (-0500) rwmcfa1
	
	* xs/GtkTreeSelection.xs: missing ; on the end of function call caused
	syntax error, with somewhat odd message, resolved.

2003/11/10 01:44 (-0500) muppetman

	* api.pod, xs/GdkColor.xs, xs/GdkPixbuf.xs, xs/GtkStyle.xs,