@@ -247,14 +247,12 @@ gdk_window_set_skip_pager_hint (window, skips_pager)
 
 #endif
 
-# FIXME need typemap for GdkGeometry
- ## void gdk_window_set_geometry_hints (GdkWindow *window, GdkGeometry *geometry, GdkWindowHints geom_mask)
- ##void
- ##gdk_window_set_geometry_hints (window, geometry, geom_mask)
- ##	GdkWindow *window
- ##	GdkGeometry *geometry
- ##	GdkWindowHints geom_mask
- ##
+## void gdk_window_set_geometry_hints (GdkWindow *window, GdkGeometry *geometry, GdkWindowHints geom_mask)
+void
+gdk_window_set_geometry_hints (window, geometry, geom_mask)
+	GdkWindow *window
+	GdkGeometry *geometry
+	GdkWindowHints geom_mask
 
 ## void gdk_set_sm_client_id (const gchar *sm_client_id)
 void
@@ -569,23 +567,6 @@ void gdk_window_set_debug_updates (GdkWindow *class_or_instance, gboolean enable
 void
 gdk_window_process_updates (GdkWindow * window, gboolean update_children)
 
-# FIXME needs typemap for GdkGeometry
- ## ## void gdk_window_constrain_size (GdkGeometry *geometry, guint flags, gint width, gint height, gint *new_width, gint *new_height)
- ##void
- ##gdk_window_constrain_size (geometry, flags, width, height)
- ##	GdkGeometry *geometry
- ##	guint flags
- ##	gint width
- ##	gint height
- ##    PREINIT:
- ##	gint new_width;
- ##	gint new_height;
- ##    PPCODE:
- ##	gdk_window_constrain_size (geometry, flags, width, height, &new_width, &new_height);
- ##	EXTEND (SP, 2);
- ##	PUSHs (sv_2mortal (mewSViv (new_width)));
- ##	PUSHs (sv_2mortal (mewSViv (new_height)));
- ##
  ## void gdk_window_get_internal_paint_info (GdkWindow *window, GdkDrawable **real_drawable, gint *x_offset, gint *y_offset)
  ##void
  ##gdk_window_get_internal_paint_info (window, real_drawable, x_offset, y_offset)
